# convergence

./: .appveyor.yml  .travis.yml  CHANGELOG.md  README.md  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yml  release.yml  unit_tests.yml
convergence/: __init__.py  functions.py  interface.py  tables.py
data/: prD.do
src/convergence/: __init__.py  functions.py  interface.py
tests/: test_functions.py  test_interface.py
verify/: __init__.py  functions.py  interface.py  tables.py
