[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "convergence"
version = "0.6.2"
authors = [
  {name = "Mathew Topper", email = "damm_horse@yahoo.co.uk"}
]
description = "A Python program to Perform Calculations Associated with a Grid Convergence Study"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering"
]

[project.scripts]
grid-convergence = "convergence.interface:cl_interface"

[project.urls]
Homepage = "https://github.com/Data-Only-Greater/convergence"
Issues = "https://github.com/Data-Only-Greater/convergence/issues"

[tool.coverage.run]
source = [
    "src/convergence"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pywintypes",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
commit_parser = "emoji"

[tool.setuptools.packages.find]
where = ["src"]
