[metadata]
name = convergence
version = 0.3.0
author = Mathew Topper
author_email = mathew.topper@dataonlygreater.com
description = A Python program to Perform Calculations Associated with a Grid Convergence Study
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Data-Only-Greater/convergence
project_urls =
    Bug Tracker = https://github.com/Data-Only-Greater/convergence/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7, !=3.10.*, !=3.11.*, <4

[options.entry_points]
console_scripts =
    grid-convergence = convergence.interface:cl_interface

[options.packages.find]
where = src

[coverage:run]
source = 
    src/convergence

